--- a/myBit/src/main/webapp/WEB-INF/web.xml
+++ b/myBit/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>struts05</display-name>
+  <display-name>myBit</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   <filter>
-    <filter-name>struts04</filter-name>
+    <filter-name>mybit</filter-name>
     <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>struts04</filter-name>
+    <filter-name>mybit</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 </web-app>
